--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/kop/kop_logo.jpg" type="image/x-icon">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>KOP</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../css/style.css">
+    <title>KOP Coffee co. - Un mimo al alma - Salados </title>
 </head>
+
 <body>
     <header>
-        <div class="header__menuNav">
+        <div id="arriba" class="header__menuNav">
             <div>
-                <img class="header__logo" src="../img/kop/kop logo crema.jpg"
+                <img class="header__logo" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100"
+                    src="../img/kop/kop logo crema.jpg"
                     alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
             </div>
             <nav class="navbar navbar-expand-lg">
@@ -43,21 +48,26 @@
     </header>
 
     <main>
-        <div  class=" colorFondoNaranja imgContainer">
+        <div class=" colorFondoNaranja imgContainer">
             <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
         </div>
-        <div class="tituloPag colorFondoVerde">    
-            <h1 class="colorCrema tamGrande">SALADOS</h1>
+        <div class="tituloPag colorFondoVerde">
+            <h1 class="colorCrema tamGrande focus-in-contract-bck">SALADOS</h1>
         </div>
         <section class="boxMaster">
             <div>
-                <h2 class="SD_Subtitulo"> La pastelería salada es una deliciosa opción para aquellos que buscan un sabor único y reconfortante. Cada bocado es una combinación perfecta de sabores, texturas y aromas que te transportarán a un mundo de satisfacción salada. Ven y disfruta de nuestra pastelería salada que hará que tus papilas gustativas se deleiten en cada visita.</h2>
+                <h2 class="SD_Subtitulo" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"> La
+                    pastelería salada es una deliciosa opción para aquellos que buscan un sabor único y reconfortante.
+                    Cada bocado es una combinación perfecta de sabores, texturas y aromas que te transportarán a un
+                    mundo de satisfacción salada. Ven y disfruta de nuestra pastelería salada que hará que tus papilas
+                    gustativas se deleiten en cada visita.</h2>
             </div>
             <ul class="main__flexCardEsclavoSal">
                 <li>
-                    <div class="salados__boxEsclavo">
+                    <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgSalado"  src="../img/salados/sand_veggie.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/sand_veggie.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Sandwich Veggie</h3>
@@ -66,9 +76,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="salados__boxEsclavo">
+                    <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgSalado"  src="../img/salados/sandwich.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/sandwich.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Tostado Italiano</h3>
@@ -77,9 +88,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="salados__boxEsclavo">
+                    <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgSalado"  src="../img/salados/medialuna_jyq.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/medialuna_jyq.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Media Luna J&Q</h3>
@@ -88,20 +100,23 @@
                     </div>
                 </li>
                 <li>
-                    <div class="salados__boxEsclavo">
+                    <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgSalado"  src="../img/salados/trisq_palta.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/trisq_palta.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Trisqueta de Palta</h3>
-                            <p>Pan de masa madre, palta, hummus clasico, tomates confitados y aceite de oliva con especias.</p>
+                            <p>Pan de masa madre, palta, hummus clasico, tomates confitados y aceite de oliva con
+                                especias.</p>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="salados__boxEsclavo">
+                    <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgSalado"  src="../img/salados/fosforito.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/fosforito.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Fosforito KOP</h3>
@@ -111,19 +126,30 @@
                 </li>
             </ul>
         </section>
-    </main>  
-        
-    <footer  class="footer__master colorFondoCrema">
-        <div class="footer__conRrss">
+        <div>
+            <a href="#arriba"><img width="50" height="50"
+                    src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
+                    style="position: fixed;bottom: 10px;right: 2%;" /></a>
+        </div>
+    </main>
+
+    <footer class="footer__master colorFondoCrema">
+        <div class="footer__conRrss" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="../index.html"><img src="../img/icons8-facebook.svg" alt=""></a></li>
-                    <li><a href="../index.html"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
-                    <li><a href="../index.html"><img src="../img/icons8-instagram.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-facebook.svg"
+                                alt="Logo de Facebook: una 'f' en minúscula en color blanco sobre un fondo azul. Esta vez modificado a color de fondo Crema y la 'f' de color cafe. Este logo representa la plataforma de redes sociales Facebook, utilizada para conectarse con amigos, familiares y comunidades en línea."></a>
+                    </li>
+                    <li><a href="../index.html"><img src="../img/icons8-whatsapp.svg"
+                                alt="Logo de WhatsApp: un bocadillo de diálogo verde con un auricular blanco en el centro. Esta vez modificado a color de fondo Crema y el auricular de color cafe. Este logo representa la aplicación de mensajería WhatsApp, utilizada para enviar mensajes de texto, voz y multimedia a través de dispositivos móviles."></a>
+                    </li>
+                    <li><a href="../index.html"><img src="../img/icons8-instagram.svg"
+                                alt="Logo de Instagram: una cámara estilizada en tonos degradados de color morado, rosa y naranja. Esta vez con dos tonos fondo colro crema y lineas de color cafe. Este logo representa la plataforma de redes sociales Instagram, utilizada para compartir fotos y videos, y para conectarse con amigos, familiares y seguidores a través de contenido visual."></a>
+                    </li>
                 </ul>
             </div>
             <div class="footer__contacto">
-                <ul class="footer__padNone"> 
+                <ul class="footer__padNone">
                     <li>
                         <h3>Contáctenos:</h3>
                     </li>
@@ -137,10 +163,11 @@
             </div>
         </div>
         <div>
-            <img class="footer__logo" src="../img/kop/kop logo crema.jpg"
+            <img class="footer__logo" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"
+                src="../img/kop/kop logo crema.jpg"
                 alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
         </div>
-        <div>
+        <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
                 width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
@@ -148,8 +175,12 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
+
 </html>
