--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,19 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>KOP</title>
+    <title>KOP Coffee co. - Un mimo al alma -Dulces </title>
 </head>
+
 <body>
     <header>
-        <div class="header__menuNav">
+        <div id="arriba" class="header__menuNav">
             <div>
-                <img class="header__logo" src="../img/kop/kop logo crema.jpg"
+                <img class="header__logo" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100"
+                    src="../img/kop/kop logo crema.jpg"
                     alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
             </div>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid header__padNone">
-                    <!-- <a class="navbar-brand" href="#"></a> -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -41,79 +45,102 @@
             </nav>
         </div>
     </header>
-        
+
     <main>
-        <div  class=" colorFondoNaranja imgContainer">
+        <div class=" colorFondoNaranja imgContainer">
             <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
         </div>
-        <div class="tituloPag colorFondoVerde">    
-            <h1 class="colorCrema tamGrande">DULCES</h1>
+        <div class="tituloPag colorFondoVerde">
+            <h1 class="colorCrema tamGrande focus-in-contract-bck">DULCES</h1>
         </div>
 
         <section class="boxMaster">
             <div>
-                <h2 class="SD_Subtitulo">La pastelería dulce es un verdadero paraíso para los amantes de los postres. Cada creación está cuidadosamente elaborada con ingredientes de alta calidad y amor por la repostería, asegurando que cada bocado sea una experiencia dulce y memorable. Ven y descubre el encanto de nuestra pastelería dulce, que hace que cada visita a nuestra cafetería sea aún más especial.</h2>
+                <h2 class="SD_Subtitulo" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                    La pastelería dulce es un verdadero paraíso para los amantes de los postres. Cada creación está
+                    cuidadosamente elaborada con ingredientes de alta calidad y amor por la repostería, asegurando que
+                    cada bocado sea una experiencia dulce y memorable. Ven y descubre el encanto de nuestra pastelería
+                    dulce, que hace que cada visita a nuestra cafetería sea aún más especial.</h2>
             </div>
             <ul class="main__flexCardEsclavoDul">
                 <li>
-                    <div class="dulces__boxEsclavo">
+                    <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
                             <img class="imgDulces" src="../img/dulces/keylime.jpg" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Key Lime</h3>
-                            <p>Base de galleta desmenuzada, un relleno suave y cítrico hecho con jugo de lima, y una capa de crema batida.</p>
+                            <p>Base de galleta desmenuzada, un relleno suave y cítrico hecho con jugo de lima, y una
+                                capa de crema batida.</p>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="dulces__boxEsclavo">
+                    <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
                             <img class="imgDulces" src="../img/dulces/cheesecake.png" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Cheesecake</h3>
-                            <p>Base de galleta crujiente, una capa de queso crema suave y sedosa,y frutos rojos, como fresas, frambuesas y moras  .</p>
+                            <p>Base de galleta crujiente, una capa de queso crema suave y sedosa,y frutos rojos, como
+                                fresas, frambuesas y moras .</p>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="dulces__boxEsclavo">
+                    <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgDulces"  src="../img/dulces/alfajores.png" alt="">
+                            <img class="imgDulces" src="../img/dulces/alfajores.png" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Alfajores</h3>
-                            <p>Todos rellenos de dulce de leche. Puedes elegir entre: Dulce de leche, Pistachos o Maicena.</p>
+                            <p>Todos rellenos de dulce de leche. Puedes elegir entre: Dulce de leche, Pistachos o
+                                Maicena.</p>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="dulces__boxEsclavo">
+                    <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
+                        data-aos-delay="100">
                         <div>
-                            <img class="imgDulces"  src="../img/dulces/rogel.png" alt="">
+                            <img class="imgDulces" src="../img/dulces/rogel.png" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Torta Rogel</h3>
-                            <p>Capas finas y crujientes de masa de hojaldre intercaladas con dulce de leche, y cubierta con merengue.</p>
+                            <p>Capas finas y crujientes de masa de hojaldre intercaladas con dulce de leche, y cubierta
+                                con merengue.</p>
                         </div>
                     </div>
                 </li>
             </ul>
         </section>
-    </main>  
-        
-    <footer  class="footer__master colorFondoCrema">
-        <div class="footer__conRrss">
+        <div>
+            <a href="#arriba"><img width="50" height="50"
+                    src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
+                    style="position: fixed;bottom: 10px;right: 2%;" /></a>
+        </div>
+    </main>
+
+    <footer class="footer__master colorFondoCrema">
+        <div class="footer__conRrss" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="../index.html"><img src="../img/icons8-facebook.svg" alt=""></a></li>
-                    <li><a href="../index.html"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
-                    <li><a href="../index.html"><img src="../img/icons8-instagram.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-facebook.svg"
+                                alt="Logo de Facebook: una 'f' en minúscula en color blanco sobre un fondo azul. Esta vez modificado a color de fondo Crema y la 'f' de color cafe. Este logo representa la plataforma de redes sociales Facebook, utilizada para conectarse con amigos, familiares y comunidades en línea."></a>
+                    </li>
+                    <li><a href="../index.html"><img src="../img/icons8-whatsapp.svg"
+                                alt="Logo de WhatsApp: un bocadillo de diálogo verde con un auricular blanco en el centro. Esta vez modificado a color de fondo Crema y el auricular de color cafe. Este logo representa la aplicación de mensajería WhatsApp, utilizada para enviar mensajes de texto, voz y multimedia a través de dispositivos móviles."></a>
+                    </li>
+                    <li><a href="../index.html"><img src="../img/icons8-instagram.svg"
+                                alt="Logo de Instagram: una cámara estilizada en tonos degradados de color morado, rosa y naranja. Esta vez con dos tonos fondo colro crema y lineas de color cafe. Este logo representa la plataforma de redes sociales Instagram, utilizada para compartir fotos y videos, y para conectarse con amigos, familiares y seguidores a través de contenido visual."></a>
+                    </li>
                 </ul>
             </div>
             <div class="footer__contacto">
-                <ul class="footer__padNone"> 
+                <ul class="footer__padNone">
                     <li>
                         <h3>Contáctenos:</h3>
                     </li>
@@ -127,10 +154,11 @@
             </div>
         </div>
         <div>
-            <img class="footer__logo" src="../img/kop/kop logo crema.jpg"
+            <img class="footer__logo" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"
+                src="../img/kop/kop logo crema.jpg"
                 alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
         </div>
-        <div>
+        <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
                 width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
@@ -138,8 +166,12 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
+
 </html>
