--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -122,12 +122,12 @@
         <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 10px;right: 30px;" /></a>
+                    style="position: fixed;bottom: 50px;right: 50px;" /></a>
         </div>
     </main>
 
     <footer class="footer__master colorFondoCrema">
-        <div class="footer__conRrss" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
+        <div class="footer__conRrss" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
                     <li><a href="../index.html"><img src="../img/icons8-facebook.svg"
@@ -156,11 +156,11 @@
             </div>
         </div>
         <div>
-            <img class="footer__logo" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"
+            <img class="footer__logo" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100"
                 src="../img/kop/kop logo crema.jpg"
                 alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
         </div>
-        <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100">
+        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
                 width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
